--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,11 +10,13 @@
     <meta property="og:title" content="EventFlow - End-to-End Event Management Platform" />
     <meta property="og:description" content="The complete platform connecting organizers, sponsors, and communities for seamless event management" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="fav.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@eventflow" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="fav.png" />
+
+    <link rel="icon" type="image/png" href="fav.png" />
   </head>
 
   <body>
