--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EventFlow - End-to-End Event Management Platform</title>
+    <title>Rheo - End-to-End Event Management Platform</title>
     <meta name="description" content="The complete platform connecting organizers, sponsors, and communities for seamless event management" />
-    <meta name="author" content="EventFlow" />
+    <meta name="author" content="Rheo" />
 
-    <meta property="og:title" content="EventFlow - End-to-End Event Management Platform" />
+    <meta property="og:title" content="Rheo - End-to-End Event Management Platform" />
     <meta property="og:description" content="The complete platform connecting organizers, sponsors, and communities for seamless event management" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="fav.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@eventflow" />
+    <meta name="twitter:site" content="@rheo" />
     <meta name="twitter:image" content="fav.png" />
 
     <link rel="icon" type="image/png" href="fav.png" />
