favicon, logo updated

--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rheo - End-to-End Event Management Platform</title>
-    <meta name="description" content="The complete platform connecting organizers, sponsors, and communities for seamless event management" />
-    <meta name="author" content="Rheo" />
 
-    <meta property="og:title" content="Rheo - End-to-End Event Management Platform" />
-    <meta property="og:description" content="The complete platform connecting organizers, sponsors, and communities for seamless event management" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="fav.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rheo - End-to-End Event Management Platform</title>
+  <meta name="description"
+    content="The complete platform connecting organizers, sponsors, and communities for seamless event management" />
+  <meta name="author" content="Rheo" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@rheo" />
-    <meta name="twitter:image" content="fav.png" />
+  <meta property="og:title" content="Rheo - End-to-End Event Management Platform" />
+  <meta property="og:description"
+    content="The complete platform connecting organizers, sponsors, and communities for seamless event management" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="fav.png" />
 
-    <link rel="icon" type="image/png" href="fav.png" />
-  </head>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@rheo" />
+  <meta name="twitter:image" content="fav.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
